Change font of header to default font; Fix letter-spacing issue

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -400,7 +400,6 @@ ol#terms li ol {
   display: block;
   padding: 17px 0 2px 0;
   line-height: 11px;
-  letter-spacing: 1px;
   color: #FFF;
 }
 
